--- a/css/global.css
+++ b/css/global.css
@@ -209,6 +209,11 @@ nav.browse a, nav.music a {
     padding-top: 2px;
 }
 
+.container{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
 nav a.heavy { background: url("../img/icon/heavy.png") no-repeat 0px; }
 nav a.recent { background: url("../img/icon/recent.png") no-repeat 0px; }
 nav a.top { background: url("../img/icon/top.png") no-repeat 0px; }
